--- a/cleanandgarden/.gitignore
+++ b/cleanandgarden/.gitignore
@@ -1,43 +1,52 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # Node.js dependencies
 node_modules/
 web/node_modules/
 mobile/node_modules/
 backend/node_modules/
 
-# Next.js y builds web
+# Next.js builds
 web/.next/
+web/.next/trace
+web/.next/cache
 web/out/
 web/build/
 
-# React Native o builds mobile
+# React Native builds
 mobile/android/
 mobile/ios/
 mobile/build/
 mobile/dist/
+mobile/coverage/
 
 # Backend builds
 backend/build/
 backend/dist/
+backend/tsconfig.tsbuildinfo
 
-# Logs y otros archivos temporales
+# Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# Entornos y secretos
+# Lockfiles (ignora solo los que no uses)
+pnpm-lock.yaml
+yarn.lock
+bun.lockb
+
+# Env y secretos
 .env*
 web/.env*
 mobile/.env*
 backend/.env*
 
-# Otros archivos comunes
+# Otros comunes
 .DS_Store
 *.pem
 *.tsbuildinfo
 coverage/
 .vscode/
+.idea/
+*.swp
 .vercel
