--- a/cleanandgarden/web/package.json
+++ b/cleanandgarden/web/package.json
@@ -13,6 +13,7 @@
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
