--- a/cleanandgarden/backend/tsconfig.json
+++ b/cleanandgarden/backend/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "outDir": "dist",
     "rootDir": "src",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["node", "connect"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
