--- a/cleanandgarden/backend/package.json
+++ b/cleanandgarden/backend/package.json
@@ -18,16 +18,20 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/connect": "^3.4.38",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mime": "^3.0.4",
     "@types/node": "^24.5.2",
     "@types/nodemailer": "^7.0.1",
