--- a/cleanandgarden/web/package.json
+++ b/cleanandgarden/web/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "lucide-react": "^0.545.0",
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "sweetalert2": "^11.23.0"
+    "sweetalert2": "^11.26.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
